# y5

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: line-counter.sh
include/: camera.h  file_reader.h  gui.h  imgui_backends_bridge.h  mesh_generator.h  meth.h  shader_loader.h  types.h
include/bridges/: imgui_backends_bridge.h  tiny_obj_loader_bridge.h
include/components/: materials.h
include/core/: audio.h  callbacks.h  game.h  hash_map.h  types.h  window_manager.h
include/ecs/: component.h  ecs_engine.h  spawner.h
include/ecs/components/: comp_render.h  comp_transform.h  components_collection.h
include/ecs/systems/: sys_inputs.h  sys_physics.h  sys_render.h  systems_collection.h
include/graphics/: camera.h  mesh_generator.h  renderer.h  shader_loader.h  shaders_collection.h
include/gui/: gui.h
include/utils/: audio_manager.h  collection_fwd.h  collection_hdr.h  collection_sys.h  file_reader.h  headers_collection.h  logger_utils.h  math_utils.h  model_loader.h  obj_loader.h  shaders_collection.h  string_utils.h
lib/lodepng/src/: lodepng.c
res/models/: monkey.mtl
res/models/materials/: cat.mtl
res/shaders/: FragmentShader.glsl  VertexShader.glsl  fragment_shader_light_source.glsl  fragment_shader_noise1.glsl  fragment_shader_noise2.glsl  fragment_shader_textures.glsl  vertex_shader.glsl  vertex_shader_light_source.glsl  vertex_shader_textures.glsl
src/: camera.c  file_reader.c  gui.c  gui_backends.cpp  main.c  mesh_generator.c  shader_loader.c  stolen_img_loader.c  types.c
src/bridges/: imgui_backends_bridge.cpp  tiny_obj_loader_bridge.cpp
src/components/: materials.c
src/core/: audio.c  callbacks.c  game.c  hash_map.c  types.c  window_manager.c
src/ecs/: component.c  ecs_engine.c  spawner.c
src/ecs/systems/: sys_inputs.c  sys_render.c  sys_renderer.c
src/graphics/: camera.c  mesh_generator.c  renderer.c  shader_loader.c  shaders_collection.c
src/gui/: gui.c
src/utils/: audio_manager.c  file_reader.c  logger_utils.c  math_utils.c  model_loader.c  obj_loader.c  string_utils.c
